chore: best practice improvements
Server:
- Add compression middleware (gzip API responses ~70% smaller)
- Add helmet for security headers (XSS, clickjacking protection)
- Add rate limiting for generate endpoint (10 req/min)

Client:
- Add meta description and OG tags for SEO/sharing
- Add ErrorBoundary for graceful crash handling
- Add theme-color meta tag

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/forge.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Design Forge</title>
+    <title>Design Forge - AI Image Generation for Highrise</title>
+    <meta name="description" content="AI-powered image generation tool for Highrise virtual fashion and item design. Create, refine, and iterate on designs with Gemini AI." />
+    <meta name="theme-color" content="#1a1a1a" />
+    
+    <!-- Open Graph / Social sharing -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Design Forge" />
+    <meta property="og:description" content="AI-powered image generation for Highrise virtual fashion design" />
+    
+    <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
